@@ -243,7 +243,9 @@ typedef struct _FILE_ID_BOTH_DIR_INFORMATION
   WCHAR  FileName[1];
 } FILE_ID_BOTH_DIR_INFORMATION, *PFILE_ID_BOTH_DIR_INFORMATION;
 
+#ifndef __MINGW64_VERSION_MAJOR
 typedef ULONG KAFFINITY;
+#endif
 
 typedef enum _SYSTEM_INFORMATION_CLASS
 {
